--- a/index.html
+++ b/index.html
@@ -33,9 +33,12 @@
         <link rel="apple-touch-icon" href="icon.png">
     </head>
     <body>
-        <div class="container-offline">
-            No network connection ...
-        </div>        
+        <div class="app">
+            <div id="deviceready" class="blink">
+                <p class="event listening">Connecting to Device</p>
+                <p class="event received">Device is Ready</p>
+            </div>
+        </div>
         <script type="text/javascript" src="cordova.js"></script>  
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
