--- a/index.html
+++ b/index.html
@@ -33,7 +33,14 @@
         <link rel="apple-touch-icon" href="icon.png">
     </head>
     <body>
-    <div id="deviceready" class="blink">
+        <div class="app">
+            <h1>PhoneGap</h1>
+            <div id="deviceready" class="blink">
+                <p class="event listening">Connecting to Device</p>
+                <p class="event received">Device is Ready</p>
+            </div>
+        </div>
+    
         <div class="container" id="container">
             <iframe frameborder="0" id="MyIFrame" class="video loader-iframe"></iframe>       
             <div class="video loader-div">
@@ -115,7 +122,6 @@
         </div>
         <div class="container-offline" style="display:none">
             No network connection ...
-        </div>        
         </div>        
         <script type="text/javascript" src="cordova.js"></script>  
         <script type="text/javascript" src="js/index.js"></script>
