--- a/reportlist.html
+++ b/reportlist.html
@@ -5,18 +5,20 @@
         <meta name="viewport" content="width=device-width,initial-scale=1"/>
         <link rel="stylesheet" href="css/styles.css" />
     </head>
-
+    
     <body>
         
 	<div id="header" class="header">
+		<a href="index.html" class="nav">Home</a>
 		<h1>Employee Directory</h1>
 	</div>
 	<div id="header2">
-		<h2>Employee List</h2>
+		<h2>Direct Reports</h2>
 	</div>
 	
+	
 	<div id="wrapper">
-		<ul id="employeeList" class="icon-list"></ul>
+		<ul id="reportList" class="icon-list"></ul>
 	</div>
 
 	<div id="busy"/>Loading...</div>
@@ -24,7 +26,7 @@
 	<script src="js/phonegap.js"></script>
     <script src="js/jquery.js"></script>
     <script src="js/iscroll.js"></script>
-    <script src="js/employeelist.js"></script>
+    <script src="js/reportlist.js"></script>
 
     </body>
 
