add sqllite plugin

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <link rel="apple-touch-icon" href="icon.png">
     </head>
     <body>
-        <div class="app" style="display:none;">
+        <div class="app">
             <h1>PhoneGap</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
