--- a/index.html
+++ b/index.html
@@ -164,8 +164,6 @@
 //create table and insert some record
     function populateDB(tx) {
         tx.executeSql('CREATE TABLE IF NOT EXISTS SoccerPlayer (id INTEGER PRIMARY KEY AUTOINCREMENT, Name TEXT NOT NULL, Club TEXT NOT NULL)');
-        tx.executeSql('INSERT INTO SoccerPlayer(Name,Club) VALUES ("Alexandre Pato", "AC Milan")');
-        tx.executeSql('INSERT INTO SoccerPlayer(Name,Club) VALUES ("Van Persie", "Arsenal")');
     }
  
     //function will be called when an error occurred
@@ -185,12 +183,14 @@
     }
  
     function querySuccess(tx,result){
-        $.each(result.rows,function(index){
-            var row = result.rows.item(index);
-            alert('<li><a href="#"><h3 class="ui-li-heading">'+row['Name']+'</h3><p class="ui-li-desc">Club '+row['Club']+'</p></a></li>');
-        });
- 
+        alert(result.rows.length)
+        if(result.rows.length <= 0){alert();
+            db.transaction(insertQueryDB,errorCB);
+        } 
     }  
+    function insertQueryDB(tx) {
+        tx.executeSql('INSERT INTO SoccerPlayer(Name,Club) VALUES ("Alexandre Pato", "AC Milan")');
+    }
 
     
         var fbLoginSuccess = function (userData) 
