--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 //create table and insert some record
     function populateDB(tx) {
         //tx.executeSql('DROP TABLE IF EXISTS reg_users');
-        tx.executeSql('CREATE TABLE IF NOT EXISTS SoccerPlayer (id INTEGER PRIMARY KEY AUTOINCREMENT, Name TEXT NOT NULL, Club TEXT NOT NULL)');
+        tx.executeSql('CREATE TABLE IF NOT EXISTS reg_users (id integer primary key, device_id text, email text, password text, data_num integer)');
     }
  
     //function will be called when an error occurred
