--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 //getDeviceId(456);
                 //window.localStorage.setItem("deviceId", '460');
                 //alert('progress-bar-validation');
-                isDeviceExistInDB('460');
+                //isDeviceExistInDB('460');
                 $('#load_light').hide();
                 $('.Offline-app-login-window').show();
                 var push = PushNotification.init({ "android": {"senderID": "267514034297", "icon": "phonegap", "iconColor": "blue"},
