--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
                     <h2>No connection</h2>
                     <span>Please check your internet connection.</span>
                 </div> 
-                
                 <div class="loading_mask" id="load_light" style="position: fixed; top: 0px; left: 0px;display:none;">
                     <div class="loading_image">
                             <img alt="loading your required product" src="http://54.169.245.192/kazo/skin/frontend/rwd/kazo/images/loading_p.gif">
@@ -136,7 +135,7 @@
             var db = window.openDatabase("KAZO_DB", "1.0", "Just a KAZO DB", 200000);
             var pushNotification;
             function onDeviceReady() {
-                checkConnection();
+                //checkConnection();
                 db.transaction(populateDB, errorCB, successCB);
                 //getDeviceId(456);
                 //window.localStorage.setItem("deviceId", '460');
