--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="container-offline" style="display:block">
+                <div class="container-offline" style="display:none">
                     <h2>No connection</h2>
                     <span>
                         Please check your internet connection.<br />
