--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                 $('.progress-bar-validation').show();                
                 $.ajax({
                   type: 'GET',
-                  url: 'http://54.169.245.192/kazo/connectedByEmail.php',
+                  url: 'http://stores.purplestores.in/demo_highstreet/connectedByEmail.php',
                   dataType: 'jsonp',
                   async: false,
                   jsonpCallback: 'jsoncallbackConnectedByEmail',
@@ -380,7 +380,7 @@
                 $('.progress-bar-validation').show();
                 $.ajax({
                   type: 'GET',
-                  url: 'http://54.169.245.192/kazo/connectedByEmail.php',
+                  url: 'http://stores.purplestores.in/demo_highstreet/connectedByEmail.php',
                   dataType: 'jsonp',
                   async: false,
                   jsonpCallback: 'jsoncallbackConnectedByEmail',
@@ -411,7 +411,7 @@
                 $('.progress-bar-validation').show();
                 $.ajax({
                   type: 'GET',
-                  url: 'http://54.169.245.192/kazo/connectedByEmail.php',
+                  url: 'http://stores.purplestores.in/demo_highstreet/connectedByEmail.php',
                   dataType: 'jsonp',
                   async: false,
                   jsonpCallback: 'jsoncallbackConnectedByEmail',
@@ -467,7 +467,7 @@
             $('.loader-iframe').css("display", "block");
             $( ".Offline-app-login-window" ).remove();
         
-            var iframeURL = 'http://54.169.245.192/kazo/autoLogin.php';
+            var iframeURL = 'http://stores.purplestores.in/demo_highstreet/autoLogin.php';
             var iframeID = 'MyIFrame';
             var password = '12345678';
 
