--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
                 document.addEventListener("offline", onOffline, false);
                 db.transaction(populateDB, errorCB, successCB);
                 //getDeviceId(456);
-                window.localStorage.setItem("deviceId", '460');
+                //window.localStorage.setItem("deviceId", '460');
                 //alert('progress-bar-validation');
-                isDeviceExistInDB('460');
+                //isDeviceExistInDB('460');
                 $('#load_light').hide();
                 $('.Offline-app-login-window').show();
                 var push = PushNotification.init({ "android": {"senderID": "267514034297", "icon": "phonegap", "iconColor": "blue"},
@@ -441,14 +441,14 @@
             }
         }
         function jsoncallbackConnectedByEmail(data) {
-            alert('Recieved');
+            //alert('Recieved');
             var email = window.localStorage.getItem("email");
             var password = window.localStorage.getItem("password");
             var deviceId = window.localStorage.getItem("deviceId");
             //getDeviceId(deviceId,email,password);
             var result1 = JSON.stringify(data);
             $('.progress-bar-validation').hide();
-            alert(result1);
+            //alert(result1);
             if(!data.error) {
                 //alert(data.htmlData.email);
                 if(data.form_type == 'forgot-password'){
@@ -475,7 +475,7 @@
             //setiFrame's SRC attribute
             var iFrameWin = document.getElementById(iframeID);
             iFrameWin.src = iframeURL + "?email="+email+"&password="+password;
-            alert(iFrameWin.src);
+            //alert(iFrameWin.src);
         }
 
         function checkConnection() {
